# hexlet_pytest

./: README.md  lesson_5_stack.py  pyproject.toml
tests/: test_example.py  test_stack.py
